# XXRJ

./: .gitattributes  .gitignore  AGENTS.md  DEV-PLAN.md  Design-Brief.md  FORMULA-RESEARCH.md  PROJECT-HANDOFF.md  Product-Spec-CHANGELOG.md  Product-Spec.md  RELEASE-VALIDATION.md  UI-DESIGN-HANDOFF.md
selector-desktop/src-tauri/: Cargo.toml  tauri.conf.json
selector-desktop/src-tauri/capabilities/: default.json
selector-desktop/src-tauri/migrations/: 0001_init.sql  0002_pdf_catalog.sql
selector-desktop/src-tauri/resources/: pdf_coverage_matrix.json
selector-desktop/src-tauri/src/: main.rs
selector-desktop/src-tauri/src/cases/: mod.rs  models.rs  repository.rs  tests.rs
selector-desktop/src-tauri/src/db/: mod.rs
selector-desktop/src-tauri/src/engine/: formula.rs  mod.rs  models.rs  modules.rs  rules.rs  safety_factor.rs  units.rs
selector-desktop/src-tauri/src/knowledge/: mod.rs  models.rs  repository.rs  repository_candidates.rs  repository_tests.rs
selector-desktop/src-tauri/src/modules/: common.rs  mod.rs  tests.rs
selector-desktop/src-tauri/src/modules/drive/: mod.rs  motor.rs  servo_stepper.rs
selector-desktop/src-tauri/src/modules/pneumatic/: mod.rs  (+6 more)
selector-desktop/src-tauri/src/pdf/: catalog.rs  coverage.rs  knowledge_entries.rs  mod.rs  parameters.rs  root_note_ingest.rs  root_note_ingest_tests.rs  snippets.rs  text_extract.rs
selector-desktop/src-tauri/src/qa/: coverage_audit.rs  mod.rs  regression_runner.rs
selector-desktop/src-tauri/src/report/: content.rs  excel_report.rs  mod.rs  models.rs  pdf_report.rs  repository.rs  tests.rs
(+145 files in other folders)
