[package]
name = "selector-desktop"
version = "0.1.0"
description = "非标自动化选型计算工具"
authors = ["SCKJ"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
calamine = "0.36.0"
pdf-extract = "0.12.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
rust_xlsxwriter = "0.96.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.1", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
thiserror = "2.0"
